[package]
name = "num-format-js"
version = "0.1.4"
edition = "2024"
authors = ["end-y"]
description = "WebAssembly bindings for num-format - Format numbers with locale support"
license = "MIT"
repository = "https://github.com/end-y/num-format-js"
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
num-format = "0.4.4"
js-sys = "0.3"

[profile.release]
opt-level = "s"
lto = true